--- a/package.json
+++ b/package.json
@@ -18,13 +18,12 @@
     "smart-account"
   ],
   "dependencies": {
-    "viem": "^2.21.0",
-    "dotenv": "^16.4.0"
+    "dotenv": "^16.4.0",
+    "viem": "^2.21.0"
   },
   "devDependencies": {
-    "typescript": "^5.6.0",
+    "@types/node": "^22.19.3",
     "tsx": "^4.19.0",
-    "@types/node": "^22.0.0"
+    "typescript": "^5.6.0"
   }
 }
-
